--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@ body {
     font-family: var(--main-font-poppins345);
 
     overflow-x: hidden;
+
+    transition: all 0.4s ease-in-out;
 }
 
 /* header styles */
@@ -88,8 +90,7 @@ nav .fa{
 
 body.darkmode{
 
-    background-color: #22272e;
-
+    background: #22272e;
     --textColor: hsla(0, 0%, 99%, 0.9);
 }
 
