--- a/css/projects.css
+++ b/css/projects.css
@@ -42,7 +42,7 @@
 .items{
 
     border-radius: 8px;
-    box-shadow: 0 0 8px var(--navBG);
+    box-shadow: 0 0 2px var(--navBG);
     height: 18rem;
     width: 25rem;
     overflow: hidden;
@@ -50,7 +50,7 @@
 
 
 
-@media screen and (max-width: 1260px) {
+@media screen and (max-width: 1260px){
     
 
     .projects__container{
@@ -65,9 +65,10 @@
     }
 
     .items{
+
+        height: 20rem;
         width: 100%;
     }
-
 }
 
 .container__item{
@@ -81,7 +82,7 @@
 
 .item__header{
 
-    padding: 1rem 1rem 0 1rem;
+    padding: 2rem 1rem 0 1rem;
 }
 
 .item__header > *{
@@ -118,12 +119,43 @@
     font-family: var(--main-font-poppins345);
     font-weight: 500;
     color: var(--textColor);
-    box-shadow: inset 0 0 0 0 var(--main-color);
     transition: ease-in 0.2s;
 }
 
 
 .item__btn button:hover{
+
+    color: var(--main-color);
+}
+
+@media screen and (max-width: 279px) {
+    
+
+    .item__header h2, .item__header p{
+
+        font-size: 0.7rem;
+    }
+    
+    
+    .item__header h2{
+    
+        text-align: start;
+        font-size: 1.5rem;
+    }
+}
+
+.projects__footer {
+
+    display: block;
+    margin-top: 2rem;
+}
+
+.projects__footer__github {
+
+    border-bottom: 2px solid var(--main-color);
+}
+
+.projects__footer__github:hover {
 
     color: var(--main-color);
 }
