--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 
 body {
     
-    background: hsla(23, 35%, 100%, 0.52);
+    background: rgba(223, 220, 220, 0.52);
     color: var(--textColor);
     min-height: 100vh;
     font-family: var(--main-font-poppins345);
@@ -37,7 +37,6 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* box-shadow: 1px 0 1px var(--navBG); */
 
 }
 
@@ -96,7 +95,7 @@ body.darkmode{
     --navBG: hsla(32, 100%, 45%, 1);
 }
 
-/*test*/
+
 
 input[type="checkbox"].switch{
     appearance: none;
