--- a/css/projects.css
+++ b/css/projects.css
@@ -41,6 +41,36 @@
     overflow: hidden;
 }
 
+.project__item1{
+
+    position: relative;
+
+}
+
+.viewBTN{
+    
+    z-index: 99999;
+
+}
+
+.viewBTN.view::before{
+
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    content: '';
+    width: 100%;
+    height: 100%;
+    background: url('/css/ass/calculator-project.png');
+    background-size: contain;
+    opacity: 1;
+
+}
+
+
+
 
 
 @media screen and (max-width: 900px){
