--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@
 body {
     
     background: rgba(223, 220, 220, 0.52);
+    background-attachment: fixed;
     color: var(--textColor);
     min-height: 100vh;
     font-family: var(--main-font-poppins345);
@@ -51,23 +52,41 @@ ul {
 
 }
 
-a{  
+.yow a{  
     
     font-size: 1rem;
     color: var(--textColor);
     text-decoration: none;
     width: 5rem;
+    padding: 0.2em 0;
     text-align: center;
-    background-color: transparent;
-
-    transition: 0.1s ease-in;
-    border-bottom: 0 solid var(--main-color);
+    position: relative;
 }
 
-a:hover,
+.yow a::after{
+
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    content: '';
+    width: 100%;
+    height: 2px;
+    background: var(--main-color);
+    transform: scale(0, 1);
+    transition: transform 0.2s ease-in;
+
+}
+
+.yow a:hover::after{
+
+    transform: scale(1, 1);
+}
+
+
 a:focus{
 
-    border-bottom: 3px solid var(--main-color);
+    border-bottom: 1px solid var(--main-color);
+
 }
 
 .ham{
@@ -223,12 +242,29 @@ p {
     color: var(--main-color);
     font-size: 3rem;
     transition: ease-in 0.1s;
+    cursor: pointer;
+    position: relative;
 }
 
-.name:hover{
+.name::after{
 
-    cursor: pointer;
-    border-bottom: 3px solid var(--main-color);
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 3px;
+    bottom: 0;
+    left: 0;
+    background: var(--main-color);
+
+    transform: scale(0, 1);
+    transform-origin: 0% 100%;
+    transition: transform 0.3s ease;
+
+}
+
+.name:hover::after{
+
+    transform: scale(1, 1);
 }
 
 .icons__yow{
