--- a/css/projects.css
+++ b/css/projects.css
@@ -1,5 +1,15 @@
 @import url('style.css');
 
+:root{
+    --main-font-poppins345: 'Poppins', sans-serif;
+    --main-color: hsla(32, 100%, 45%, 1);
+    --textColor: hsla(0, 0%, 0%, 0.9);
+    --DefaultColor: hsla(173, 96%, 100%, 0.9);
+    --navBG: hsla(32, 100%, 77%, 1);
+    --box-shadow-color: hsla(173, 96%, 100%, 0.9);
+
+    --items-color: rgb(255, 255, 255);
+}
 
 
 .projects{
@@ -14,7 +24,10 @@
 }
 
 .projects__header, .projects__header h2{
+
+
     margin-bottom: 2rem;
+
 }
 
 .projects__container{
@@ -34,23 +47,17 @@
 
 .items{
 
-    border-radius: 8px;
-    box-shadow: 0 0 2px var(--navBG);
+    background: var(--items-color);
+    border-radius: 8px; 
+    box-shadow: 0 0 8px -7px var(--box-shadow-color);
     height: 18rem;
-    width: 25rem;
+    width: 23rem;
     overflow: hidden;
 }
 
-.project__item1{
 
-    position: relative;
-
-}
-
-.viewBTN{
-    
-    z-index: 99999;
-
+/* .viewBTN{
+    z-index: 1;
 }
 
 .viewBTN.view::before{
@@ -62,15 +69,11 @@
     z-index: -1;
     content: '';
     width: 100%;
-    height: 100%;
     background: url('/css/ass/calculator-project.png');
+    background-repeat: no-repeat;
     background-size: contain;
     opacity: 1;
-
-}
-
-
-
+} */
 
 
 @media screen and (max-width: 900px){
@@ -109,7 +112,7 @@
 
 .item__header{
 
-    padding: 2rem 1rem 0 1rem;
+    padding: 1rem 1rem 0 1rem;
 }
 
 .item__header > *{
@@ -142,7 +145,7 @@
 
 .item__btn{
     width: 100%;
-    height: 100%;
+    height: 3rem;
     gap: 1px;
     display: flex;
 }
@@ -189,6 +192,10 @@
 
 .projects__footer__github {
 
+    text-decoration: none;
+    color: var(--textColor);
+    font-family: var(--main-font-poppins345);
+    font-weight: 500;
     border-bottom: 2px solid var(--main-color);
 }
 
