--- a/css/techs.css
+++ b/css/techs.css
@@ -90,11 +90,11 @@
         margin-bottom: 0.5rem;
     }
     
-    .techsBro{
+    /* .techsBro{
 
         width: 18rem;
 
-    }
+    } */
     
     .techs{
 
