--- a/css/style.css
+++ b/css/style.css
@@ -24,9 +24,8 @@ body {
     color: var(--textColor);
     min-height: 100vh;
     font-family: var(--main-font-poppins345);
-
+    padding: 2rem;
     overflow-x: hidden;
-
     transition: all 0.4s ease-in-out;
 }
 
@@ -214,7 +213,7 @@ input[type="checkbox"].switch:checked{
     width: 100vw;
     height: 700px;
     gap: 1rem;
-    padding: 0 5rem;
+    /* padding: 0 5rem; */
 }
 
 .home__inside__container{
