--- a/css/techs.css
+++ b/css/techs.css
@@ -1,27 +1,13 @@
-:root{
-    --main-font-poppins345: 'Poppins', sans-serif;
-    --main-color: hsla(32, 100%, 45%, 1);
-    --textColor: hsla(0, 0%, 0%, 0.9);
-    --DefaultColor: hsla(173, 96%, 100%, 0.9);
-    --navBG: hsla(32, 100%, 77%, 1);
-
-
-    --items-color: rgba(223, 220, 220, 0.52);
-}
-
+/* 
 .techs{
 
     width: 100%;
     height: 700px;
-
-}
-
-
-.techs__container{
     display: flex;
     align-items: center;
     flex-direction: column;
     text-align: center;
+
 }
 
 .techs__container > *{
@@ -36,7 +22,7 @@
 
     display: grid;
     align-items: center;
-    width: 100%;
+    width: 50%;
     height: 100%;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 4rem);
@@ -68,8 +54,8 @@
 
     position: absolute;
     /* top: 10px; */
-    left: 15px;
-
+    /* left: 15px; */
+/* 
 }
 
 .tech__skill__title {
@@ -90,25 +76,27 @@
         margin-bottom: 0.5rem;
     }
     
-    /* .techsBro{
+    .techsBro{
 
         width: 18rem;
 
-    } */
+    }
     
-    .techs{
+    /* .techs{
 
         width: 100%;
         padding: 2em;
-    }
-    .techs__header{
+    } */
+    
+    /* .techs__header{
 
         text-align: start;
     }
     .techs__skill{
 
+        width: 100%;
         grid-template-columns: 1fr;
         padding: 5rem;
     }
 
-}
+} */ 
