--- a/css/style.css
+++ b/css/style.css
@@ -212,7 +212,7 @@ input[type="checkbox"].switch:checked{
     width: 100vw;
     height: 700px;
     gap: 1rem;
-    /* padding: 0 5rem; */
+    padding: 0 5rem;
 }
 
 .home__inside__container{
