--- a/css/techs.css
+++ b/css/techs.css
@@ -1,4 +1,4 @@
-/* 
+
 .techs{
 
     width: 100%;
@@ -22,7 +22,7 @@
 
     display: grid;
     align-items: center;
-    width: 50%;
+    width: 100%;
     height: 100%;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 4rem);
@@ -53,9 +53,9 @@
 .icons__techs{
 
     position: absolute;
-    /* top: 10px; */
-    /* left: 15px; */
-/* 
+    top: 10px;
+     left: 15px;
+
 }
 
 .tech__skill__title {
@@ -72,23 +72,14 @@
 
 @media screen and (max-width: 995px){
 
-    .techs__container > *{
-        margin-bottom: 0.5rem;
-    }
     
-    .techsBro{
-
-        width: 18rem;
-
-    }
-    
-    /* .techs{
+     .techs{
 
         width: 100%;
         padding: 2em;
-    } */
+    } 
     
-    /* .techs__header{
+    .techs__header{
 
         text-align: start;
     }
@@ -96,7 +87,7 @@
 
         width: 100%;
         grid-template-columns: 1fr;
-        padding: 5rem;
+        padding: 0;
     }
 
-} */ 
+} 
