--- a/css/techs.css
+++ b/css/techs.css
@@ -83,9 +83,8 @@
     
 
     .techs{
-        
         height: 800px;
-        width: 100vw;
+        width: 100%;
         padding: 2em;
     } 
     
